# wiki-classification-mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  test.py  uv-package-check.sh
.github/workflows/: tests.yaml
cloud/: cloudbuild.yaml  cloudbuild_api.yaml
configs/: config.yaml
configs/sweep/: sweep.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  test.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
logs/lightning_logs/version_0/: hparams.yaml
logs/lightning_logs/version_3/: hparams.yaml  metrics.csv
logs/lightning_logs/version_5/: hparams.yaml
logs/lightning_logs/version_7/: metrics.csv
models/: model.pt  split_0_model.pt  split_10_model.pt  split_11_model.pt  split_12_model.pt  split_13_model.pt  split_14_model.pt  split_15_model.pt  split_16_model.pt  split_17_model.pt  split_18_model.pt  split_19_model.pt  split_1_model.pt  split_2_model.pt  split_3_model.pt  split_4_model.pt  split_5_model.pt  split_6_model.pt  split_7_model.pt  split_8_model.pt  split_9_model.pt
reports/: README.md  README_c.md  my_datadrit_report.json
src/wikipedia/: api.py  api_user_input_test.py  data.py  data_drift.ipynb  data_drift.py  dataset_statistics.py  gcp_utils.py  model.py  test.py  train copy.py  train.py  visualize.py
tests/: locustfile.py  test_api.py  test_data.py  test_model.py  test_model_training.py  test_train.py  test_train_on_split.py  test_visualize.py
