#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

[project]
name = "scientific"
version = "0.0.1"
description = "Classification of scientific papers"
authors = [
  { name = "Rasmus Fiehn", email = "s204617@dtu.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "torch>=2.5.1",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
